fix primary menu

--- a/7th-dec-2023.html
+++ b/7th-dec-2023.html
@@ -6,10 +6,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?44?5386?1340?9823?3149?6274?8264?7089?8111?3850?4076?5917?8890?7583?6117?236">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8098">
-	<link rel="stylesheet" type="text/css" href="style.css?3968">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9906">
+	<link rel="stylesheet" type="text/css" href="style.css?1079">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>30th-Nov-2023-1</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -44,45 +44,95 @@
 								<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon " d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-									<ul class="site-navigation nav navbar-nav ml-auto">
+									<ul class="site-navigation nav navbar-nav ml-auto ">
 										<li class="nav-item">
-											<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+											<a href="index.html" class="nav-link">Home</a>
 										</li>
 										<li class="nav-item">
-											<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+											<a href="about.html" class="nav-link">About</a>
 										</li>
 										<li class="nav-item">
-											<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+											<div class="dropdown btn-dropdown">
+												<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
+												<ul class="dropdown-menu" role="menu">
+													<li class="nav-item">
+														<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="1st-feb-2024.html" class="nav-link">1st Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="30-january-2025.html" class="nav-link">30th January 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="6-february-2025.html" class="nav-link">6th February 2025</a>
+													</li>
+												</ul>
+											</div>
 										</li>
 										<li class="nav-item">
-											<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+											<div class="dropdown btn-dropdown">
+												<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
+												<ul class="dropdown-menu" role="menu">
+													<li class="nav-item">
+														<a href="2023-24-archive.html" class="nav-link">2023-24</a>
+													</li>
+													<li class="nav-item">
+														<a href="2022-23.html" class="nav-link">2022-23</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2022.html" class="nav-link">Spring 2022</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2019.html" class="nav-link">Spring 2019</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2018.html" class="nav-link">Spring 2018</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2017.html" class="nav-link">Spring 2017</a>
+													</li>
+												</ul>
+											</div>
 										</li>
 										<li class="nav-item">
-											<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+											<a href="photo-archive.html" class="nav-link">Photo Archive</a>
 										</li>
 										<li class="nav-item">
-											<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+											<a href="podcast.html" class="nav-link">Podcast</a>
 										</li>
 										<li class="nav-item">
-											<a href="1st-feb-2024.html" class="nav-link">1st Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="6-february-2025.html" class="nav-link a-btn">6th February 2025</a>
-										</li>
-										<li class="nav-item">
-											<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="30-january-2025.html" class="nav-link a-btn">30th January 2025</a>
-										</li>
-										<li class="nav-item">
-											<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+											<a href="contact.html" class="nav-link">Contact</a>
 										</li>
 									</ul>
 								</div>
@@ -100,7 +150,7 @@
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
-				<picture><source type="image/webp" srcset="img/hh_logo_2019.webp"><img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" width="655" height="208"></picture>
+				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019">
 			</div>
 		</div>
 	</div>
@@ -135,7 +185,7 @@
 					<div class="card-header">
 						<h3 class="mg-md">
 							Panel Discussion - Work Experience & First Jobs
-						</h3><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HH_7_DEC_2023%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block mg-lg lazyload" alt="Luke" width="1128" height="1128"></picture>
+						</h3><img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block mg-lg lazyload" alt="Luke">
 						<p class="mg-lg p-bloc-32-style">
 							(Clockwise from top left)&nbsp;<a href="https://www.linkedin.com/in/igor-a5015b174/">Igor Kanchukovskyi</a> 3rd year BSc Software Engineer, <a href="https://www.linkedin.com/in/airenbushby/">Airen Bushby</a> - BSc Cyber Security Management Graduate (Class 2022) - Junior Pre-Sales Consultant at <a href="https://www.linkedin.com/company/axiansuk/">Axians UK</a>, <a href="https://www.linkedin.com/in/william-tasker-b47530194/">Will Tasker</a> - BSc Software Engineer Graduate (Class 2022) - Graduate Software Engineer at <a href="https://www.linkedin.com/company/simplementary/">Simplementary</a> and Patrick West BSc Computing Graduate (Class 2020) - System Integration Manager at <a href="https://www.liteip.com/">LiteIP Ltd.</a><br>
 						</p>
@@ -204,9 +254,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?2750"></script>
-<script src="./js/bootstrap.bundle.min.js?6988"></script>
-<script src="./js/blocs.min.js?2840"></script>
+<script src="./js/jquery.min.js?3053"></script>
+<script src="./js/bootstrap.bundle.min.js?8904"></script>
+<script src="./js/blocs.min.js?9783"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
