--- a/19th-oct-2023.html
+++ b/19th-oct-2023.html
@@ -6,10 +6,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?44?5386?1340?9823?3149?6274?8264?7089?8111?3850?4076?5917">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8098">
-	<link rel="stylesheet" type="text/css" href="style.css?3968">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9906">
+	<link rel="stylesheet" type="text/css" href="style.css?1079">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th Oct 2023</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -44,45 +44,95 @@
 								<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon " d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-									<ul class="site-navigation nav navbar-nav ml-auto">
+									<ul class="site-navigation nav navbar-nav ml-auto ">
 										<li class="nav-item">
-											<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+											<a href="index.html" class="nav-link">Home</a>
 										</li>
 										<li class="nav-item">
-											<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+											<a href="about.html" class="nav-link">About</a>
 										</li>
 										<li class="nav-item">
-											<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+											<div class="dropdown btn-dropdown">
+												<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
+												<ul class="dropdown-menu" role="menu">
+													<li class="nav-item">
+														<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="1st-feb-2024.html" class="nav-link">1st Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="30-january-2025.html" class="nav-link">30th January 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="6-february-2025.html" class="nav-link">6th February 2025</a>
+													</li>
+												</ul>
+											</div>
 										</li>
 										<li class="nav-item">
-											<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+											<div class="dropdown btn-dropdown">
+												<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
+												<ul class="dropdown-menu" role="menu">
+													<li class="nav-item">
+														<a href="2023-24-archive.html" class="nav-link">2023-24</a>
+													</li>
+													<li class="nav-item">
+														<a href="2022-23.html" class="nav-link">2022-23</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2022.html" class="nav-link">Spring 2022</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2019.html" class="nav-link">Spring 2019</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2018.html" class="nav-link">Spring 2018</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2017.html" class="nav-link">Spring 2017</a>
+													</li>
+												</ul>
+											</div>
 										</li>
 										<li class="nav-item">
-											<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+											<a href="photo-archive.html" class="nav-link">Photo Archive</a>
 										</li>
 										<li class="nav-item">
-											<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+											<a href="podcast.html" class="nav-link">Podcast</a>
 										</li>
 										<li class="nav-item">
-											<a href="1st-feb-2024.html" class="nav-link">1st Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="6-february-2025.html" class="nav-link a-btn">6th February 2025</a>
-										</li>
-										<li class="nav-item">
-											<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="30-january-2025.html" class="nav-link a-btn">30th January 2025</a>
-										</li>
-										<li class="nav-item">
-											<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+											<a href="contact.html" class="nav-link">Contact</a>
 										</li>
 									</ul>
 								</div>
@@ -100,7 +150,7 @@
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
-				<picture><source type="image/webp" srcset="img/hh_logo_2019.webp"><img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" width="655" height="208"></picture>
+				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019">
 			</div>
 		</div>
 	</div>
@@ -133,12 +183,12 @@
 					<div class="card-header">
 						<h3 class="mg-clear">
 							Ryan Gaudion
-						</h3><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/ryan.webp"><img src="img/lazyload-ph.png" data-src="img/ryan.png" class="img-fluid mx-auto d-block lazyload" alt="ryan" width="400" height="400"></picture>
+						</h3><img src="img/lazyload-ph.png" data-src="img/ryan.png" class="img-fluid mx-auto d-block lazyload" alt="ryan">
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
 							<br>Meet <a href="https://www.linkedin.com/in/ryan-gaudion/">Ryan Gaudion</a>, a software developer with four years of experience at <a href="https://www.lockheedmartin.com/">Lockheed Martin</a>. Ryan’s educational journey continued at <a href="https://www.solent.ac.uk/">Solent University</a> where he completed his <a href="https://www.solent.ac.uk/courses/apprenticeships/digital-and-technology-solutions-professional-integrated-degree-apprenticeship">BSc Digital Technology Solutions Degree Apprenticeship</a> in 2023. In his spare time, Ryan works on many “side-projects” as well as <a class="link-0-style" href="https://www.youtube.com/c/RyanGaudion">sharing his passion for STEM</a> topics both online as well as at local schools.<br><br><a href="https://github.com/RyanGaudion/">github.com/RyanGaudion/</a><br><br>
-						</p><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/ryan_YT.webp"><img src="img/lazyload-ph.png" data-src="img/ryan_YT.png" class="img-fluid mx-auto d-block lazyload" alt="ryan_YT" width="1128" height="933"></picture>
+						</p><img src="img/lazyload-ph.png" data-src="img/ryan_YT.png" class="img-fluid mx-auto d-block lazyload" alt="ryan_YT">
 						<p>
 							<br><a href="https://www.youtube.com/c/RyanGaudion">youtube.com/c/RyanGaudion</a>
 						</p>
@@ -159,12 +209,12 @@
 					<div class="card-header">
 						<h3 class="mg-clear">
 							Anna Werno
-						</h3><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/anna_code_bar.webp"><img src="img/lazyload-ph.png" data-src="img/anna_code_bar.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Anna" width="800" height="800"></picture>
+						</h3><img src="img/lazyload-ph.png" data-src="img/anna_code_bar.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Anna">
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
 							Meet <a href="https://www.linkedin.com/in/annawerno/">Anna</a>, one of <a href="https://codebar.io/southampton">codebar Southampton's</a> organisers, speaking about how codebar impacted her journey into tech and how you can get involved with building a safe and supportive community to your local area.<br><br><a href="https://codebar.io/">codebar</a> is a charity that facilitates the growth of a diverse tech community by running free programming workshops and events for underrepresented group members in tech. Their mission is to make technology accessible to everyone and to help bridge the digital divide.<br><br>codebar consists of many different chapters around the world and a <a href="https://codebar.io/southampton">Southampton chapter</a> has recently joined the codebar family.<br><br><a href="https://codebar.io/southampton">codebar.io/southampton</a> <br><br>
-						</p><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/bg_Logo.webp"><img src="img/lazyload-ph.png" data-src="img/bg_Logo.png" class="img-fluid mx-auto d-block lazyload" alt="ryan_YT" width="1128" height="301"></picture>
+						</p><img src="img/lazyload-ph.png" data-src="img/bg_Logo.png" class="img-fluid mx-auto d-block lazyload" alt="ryan_YT">
 					</div>
 				</div>
 			</div>
@@ -225,9 +275,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?2750"></script>
-<script src="./js/bootstrap.bundle.min.js?6988"></script>
-<script src="./js/blocs.min.js?2840"></script>
+<script src="./js/jquery.min.js?3053"></script>
+<script src="./js/bootstrap.bundle.min.js?8904"></script>
+<script src="./js/blocs.min.js?9783"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
