--- a/2022-23.html
+++ b/2022-23.html
@@ -6,10 +6,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?44?5386?1340?9823?3149?6274?8264?7089?8111?3850">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8098">
-	<link rel="stylesheet" type="text/css" href="style.css?3968">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9906">
+	<link rel="stylesheet" type="text/css" href="style.css?1079">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home-1</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -44,45 +44,95 @@
 								<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon " d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-									<ul class="site-navigation nav navbar-nav ml-auto">
+									<ul class="site-navigation nav navbar-nav ml-auto ">
 										<li class="nav-item">
-											<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+											<a href="index.html" class="nav-link">Home</a>
 										</li>
 										<li class="nav-item">
-											<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+											<a href="about.html" class="nav-link">About</a>
 										</li>
 										<li class="nav-item">
-											<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+											<div class="dropdown btn-dropdown">
+												<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
+												<ul class="dropdown-menu" role="menu">
+													<li class="nav-item">
+														<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+													</li>
+													<li class="nav-item">
+														<a href="1st-feb-2024.html" class="nav-link">1st Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
+													</li>
+													<li class="nav-item">
+														<a href="30-january-2025.html" class="nav-link">30th January 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="6-february-2025.html" class="nav-link">6th February 2025</a>
+													</li>
+												</ul>
+											</div>
 										</li>
 										<li class="nav-item">
-											<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+											<div class="dropdown btn-dropdown">
+												<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
+												<ul class="dropdown-menu" role="menu">
+													<li class="nav-item">
+														<a href="2023-24-archive.html" class="nav-link">2023-24</a>
+													</li>
+													<li class="nav-item">
+														<a href="2022-23.html" class="nav-link">2022-23</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2022.html" class="nav-link">Spring 2022</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2019.html" class="nav-link">Spring 2019</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2018.html" class="nav-link">Spring 2018</a>
+													</li>
+													<li class="nav-item">
+														<a href="spring-2017.html" class="nav-link">Spring 2017</a>
+													</li>
+												</ul>
+											</div>
 										</li>
 										<li class="nav-item">
-											<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+											<a href="photo-archive.html" class="nav-link">Photo Archive</a>
 										</li>
 										<li class="nav-item">
-											<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+											<a href="podcast.html" class="nav-link">Podcast</a>
 										</li>
 										<li class="nav-item">
-											<a href="1st-feb-2024.html" class="nav-link">1st Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="6-february-2025.html" class="nav-link a-btn">6th February 2025</a>
-										</li>
-										<li class="nav-item">
-											<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
-										</li>
-										<li class="nav-item">
-											<a href="30-january-2025.html" class="nav-link a-btn">30th January 2025</a>
-										</li>
-										<li class="nav-item">
-											<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+											<a href="contact.html" class="nav-link">Contact</a>
 										</li>
 									</ul>
 								</div>
@@ -100,7 +150,7 @@
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
-				<picture><source type="image/webp" srcset="img/hh_logo_2019.webp"><img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" width="655" height="208"></picture>
+				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019">
 			</div>
 		</div>
 	</div>
@@ -117,13 +167,13 @@
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
 					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>
-				</p><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HAPPY_HOUR_NOV_2022_WEB.webp"><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB" width="1170" height="641"></picture>
+				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB">
 			</div>
 		</div>
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/pict%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/pict%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" width="268" height="268"></picture>
+					<img src="img/lazyload-ph.png" data-src="img/pict%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54">
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Student Panel</strong><br>Getting Your First Job<br>& Placements<br><strong>24/11/2022</strong>
@@ -133,7 +183,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.webp"><img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.jpeg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" width="268" height="268"></picture>
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.jpeg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2">
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
 							<strong>John Kilmister</strong><br>A Day in the Life of a Developer & Cloud Dev<br><strong>9/3/2023</strong><br>
@@ -143,7 +193,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" width="268" height="268"></picture>
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2">
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
 							<strong>TBC</strong><br>TBC&nbsp;<br>TBC<br><strong>23/3/2023</strong><br>
@@ -153,7 +203,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
 				<div class="card d-block">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" width="268" height="268"></picture>
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2">
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
 							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
@@ -165,7 +215,7 @@
 		<div class="row voffset-md object-hidden">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" width="268" height="268"></picture>
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2">
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Graduate Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
@@ -175,7 +225,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" width="268" height="268"></picture>
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2">
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Student Panel</strong><br>Work Experience&nbsp;<br>& Placements<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -185,7 +235,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" width="268" height="268"></picture>
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2">
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -252,9 +302,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?2750"></script>
-<script src="./js/bootstrap.bundle.min.js?6988"></script>
-<script src="./js/blocs.min.js?2840"></script>
+<script src="./js/jquery.min.js?3053"></script>
+<script src="./js/bootstrap.bundle.min.js?8904"></script>
+<script src="./js/blocs.min.js?9783"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
