--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					Happy Hour 2025
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks every other week in the first two semesters starting on 30th January 2025<br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>
 				</p><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HAPPY_HOUR_NOV_2022_WEB.webp"><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB" width="1170" height="641"></picture>
 			</div>
 		</div>
