update for 23 oct

--- a/23-october-2025.html
+++ b/23-october-2025.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="digital industry talks">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css?9277">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Home-1</title>
+    <title>16-October-2025-1</title>
 
 
     
@@ -163,145 +163,49 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-2 -->
-<div class="bloc tc-7781 l-bloc" id="bloc-2">
-	<div class="container bloc-lg">
+<!-- bloc-32 -->
+<div class="bloc tc-4845" id="bloc-32">
+	<div class="container bloc-lg bloc-md-lg">
 		<div class="row">
-			<div class="col">
-				<h1 class="mg-md h3-style h1-style">
-					Happy Hour 2023-24 - Archive
+			<div class="col text-md-left text-center">
+				<h1 class="tc-4845 mg-md text-lg-center h1-bloc-32-style">
+					Christopher Hodges<br>BSc (Hons) Computer Systems & Networks Engineering<br>& Intern&nbsp;Site Reliability Engineer Intern at Cisco<br>
+					<div>
+						<br>
+					</div>
 				</h1>
+				<h2 class="mg-md text-lg-center">
+					Thursday 23rd October 2025 17:00-18:00 – Spark Building TS111
+				</h2>
+				<p class="text-lg-center">
+					<a href="https://martinsolent.github.io/happy_hour_2022/repo_images/the-spark-room-guide-and-map.pdf">Download Spark Building Floor Plan</a><br>
+				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg">
-			<div class="align-self-center col-lg-3 col-md-6">
+	</div>
+</div>
+<!-- bloc-32 END -->
+
+<!-- bloc-32 -->
+<div class="bloc tc-7781 none" id="bloc-32">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
+		<div class="row voffset">
+			<div class="col text-md-left text-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/354441808_10168317563430294_2330253690648159454_n.webp"><img src="img/lazyload-ph.png" data-src="img/354441808_10168317563430294_2330253690648159454_n.jpg" class="img-fluid mx-auto d-block lazyload" alt="Juniper Logo" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Juniper Networks</strong><br>Placements, Getting Your <br>First Job & Working in Tech<br><strong>5/10/2023</strong>
-						</p><a href="5th-oct-2023.html" class="btn btn-block btn-c-564">More Details</a>
+					<div class="card-header">
+						<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/chris_H.webp"><img src="img/lazyload-ph.png" data-src="img/chris_H.jpg" class="img-fluid mx-auto d-block img-17593352058-style lazyload" alt="Chris H" width="450" height="450"></picture>
 					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HH_Oct_19_2023.webp"><img src="img/lazyload-ph.png" data-src="img/HH_Oct_19_2023.png" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" width="268" height="268"></picture>
 					<div class="card-body">
-						<p class="text-lg-center text-center p-bloc-2-style">
-							Ryan Gaudion &&nbsp;Anna Werno<br>Side Projects<br>& sharing your skills<br><strong>19/10/2023</strong><br>
-						</p><a href="19th-oct-2023.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/adam_don_2-11-23.webp"><img src="img/lazyload-ph.png" data-src="img/adam_don_2-11-23.jpg" class="img-fluid mx-auto d-block lazyload" alt="Adam & Dom" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-3-style">
-							Adam Chu &&nbsp;Dominik Romanek <br>Getting your first job<br><strong>2/11/2023</strong><br>
-						</p><a href="2nd-nov-2023.html" class="btn btn-style btn-c-564 btn-block">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
-				<div class="card d-block">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1686848012768.webp"><img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luke Searle" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-4-style">
-							<strong>Luke Searle</strong><br>Learning Designer at University of Southampton<br><strong>16/11/2023</strong><br>
-						</p><a href="16th-nov-2023.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row voffset-md">
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1540546768920.webp"><img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="James Whale" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
-						</p><a href="30th-nov-2023.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HH_7_DEC_2023%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="panel  7/12/23" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Panel Discussion</strong><br>Work Experience.&nbsp;<br>Placements & First Jobs<br><strong>7/12/2023&nbsp;</strong><br>
-						</p><a href="7th-dec-2023.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/ross_chapman.webp"><img src="img/lazyload-ph.png" data-src="img/ross_chapman.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Ross Chapman" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Ross Chapman</strong><br>Product Strategist & Consultant<br><strong>1/2/2024&nbsp;</strong><br>
-						</p><a href="1st-feb-2024.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/nick_h.webp"><img src="img/lazyload-ph.png" data-src="img/nick_h.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Nick Thorne<br></strong>Software Engineer<br>Director at Rockstone Data&nbsp;<br><strong>15/2/2024&nbsp;</strong><br>
-						</p><a href="15th-feb-2024.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row voffset-md">
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/datamango.webp"><img src="img/lazyload-ph.png" data-src="img/datamango.jpg" class="img-fluid mx-auto d-block img-data-man-style lazyload" alt="Data Mango" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>DataMango</strong><br>Web & Software<br>Solutions<br><strong>29/2/2024</strong><br>
-						</p><a href="29-february-2024.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20230216_165051.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20230216_165051.jpg" class="img-fluid mx-auto d-block lazyload" alt="Bradley&nbsp;Marshall" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Bradley&nbsp;Marshall</strong><br>Control Systems Engineer <br>at Ocean Infinity<br><strong>14/3/2024</strong><br>
-						</p><a href="14-march-2024.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1627677664087.webp"><img src="img/lazyload-ph.png" data-src="img/1627677664087.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Andy Clayton" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Andy&nbsp;Dayton</strong><br>Senior UX Designer <br>at JPMorgan Chase<br><strong>18/4/2024&nbsp;</strong><br>
-						</p><a href="18-april-2024.html" class="btn btn-block btn-c-564">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
-				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" width="268" height="268"></picture>
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>NAME<br></strong>Info<br>Info<br><strong>15/2/2024&nbsp;</strong><br>
-						</p><a href="15th-feb-2024.html" class="btn btn-block btn-c-564">More Details</a>
+						<p class="p-102-style text-left">
+							Chris is a final-year Computer Systems and Network Engineering student at <a href="https://www.solent.ac.uk/">Southampton Solent University</a>, with a strong passion for the evolving world of IT and network systems. <br><br>Between 2021 and 2024, Chris worked as an IT First Line Support Analyst at <a href="https://www.duttongregory.co.uk/">Dutton Gregory Solicitors</a>, supporting over 200 users across multiple offices. This role gave him valuable experience in troubleshooting, maintaining systems and networks, and delivering excellent customer service.<br><br>In 2024–25, in his placement year, Chris worked as a Site Reliability Engineer Intern at <a href="https://www.cisco.com/">Cisco</a>, one of the world’s leading technology companies.<br><br>In this session, Chris will talk about working in industry alongside studying for a degree and share his placement journey from the application and interview stages to his day-to-day role at Cisco. He’ll give insights into life at a global tech company and offer practical tips on how to secure your own placement or internship. There’ll also be time for a Q&A.<br><br><a href="https://www.linkedin.com/in/christopher-hodges1999/">Christopher Hodges| LinkedIn</a><br><br>More details: <br><br><br><br><br><br>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-2 END -->
+<!-- bloc-32 END -->
 
 <!-- ScrollToTop Button -->
 <button aria-label="Scroll to top button" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></button>
