--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8602">
-	<link rel="stylesheet" type="text/css" href="style.css?2333">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1697">
+	<link rel="stylesheet" type="text/css" href="style.css?9277">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -151,7 +151,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc l-bloc full-width-bloc" id="bloc-1">
+<div class="bloc l-bloc full-width-bloc " id="bloc-1">
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
@@ -211,20 +211,20 @@
 					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1759335205840.webp"><img src="img/lazyload-ph.png" data-src="img/1759335205840.jpeg" class="img-fluid mx-auto lazyload" alt="Luck Searle" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
-							<strong>Tyler Mealing</strong><br>Getting a Placement<br><br><strong>16/11/2023</strong><br>
-						</p><a href="16-october-2025.html" class="btn btn-block btn-c-564 ">More Details</a>
+							<strong>Tyler Mealing</strong><br>Getting a Placement&nbsp;UBS Financial Services <br><strong>16/11/2023</strong><br>
+						</p><a href="16-october-2025.html" class="btn btn-block btn-c-564">More Details</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="row voffset-md">
-			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
+			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1540546768920.webp"><img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="James Whale" width="268" height="268"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/chris_H.webp"><img src="img/lazyload-ph.png" data-src="img/chris_H.jpg" class="img-fluid mx-auto d-block lazyload" alt="James Whale" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
-							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
-						</p><a href="30th-nov-2023.html" class="btn btn-block btn-c-564">More Details</a>
+							<strong>Christopher Hodges</strong><br>Getting a Placement <br>Cisco<br><strong>23/10/2025</strong>
+						</p><a href="23-october-2025.html" class="btn btn-block btn-c-564">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -357,9 +357,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3197"></script>
-<script src="./js/bootstrap.bundle.min.js?3217"></script>
-<script src="./js/blocs.min.js?1430"></script>
+<script src="./js/jquery.min.js?3571"></script>
+<script src="./js/bootstrap.bundle.min.js?2523"></script>
+<script src="./js/blocs.min.js?2020"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
