--- a/photo-archive.html
+++ b/photo-archive.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8602">
-	<link rel="stylesheet" type="text/css" href="style.css?2333">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1697">
+	<link rel="stylesheet" type="text/css" href="style.css?9277">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>7th-Dec-2023-1</title>
@@ -152,7 +152,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc l-bloc full-width-bloc" id="bloc-1">
+<div class="bloc l-bloc full-width-bloc " id="bloc-1">
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
@@ -163,24 +163,58 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-32 -->
-<div class="bloc tc-4845" id="bloc-32">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col text-md-left text-center">
-				<h1 class="tc-4845 mg-md">
-					Photo Archive
+<!-- bloc-49 -->
+<div class="bloc l-bloc" id="bloc-49">
+	<div class="container bloc-lg bloc-sm-lg">
+		<div class="row voffset">
+			<div class="col-lg-12 mb-3">
+				<h1 class="mg-md text-center tc-4845 text-lg-left">
+					Happy Hour Archive 2015 - Present<br>
 				</h1>
-				<p class="p-31049-style mg-clear">
-					Coming Soon!
+				<p class="text-center text-lg-left">
+					Happy Hour Digital Industry Talks have been established for more than 10 years. The series has included a diverse range of speakers from the tech and digital industries, who have provided career advice and support to students. The talks have primarily focused on professional journeys and experiences.<br>
 				</p>
-				<p class="p-31049-style mg-clear">
-				</p>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190131_162824.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb" class="img-fluid-up"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190131_162824.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190131_162824.jpg" class="img-fluid mx-auto d-block img-fluid-up img-117-style lazyload" alt="IMG_20190131_162824" width="270" height="152"></picture></a>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190307_161724.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190307_161724.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190307_161724.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190425_160834.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190425_160834.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190425_160834.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190321_164143.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190321_164143.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190321_164143.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190228_160732.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190228_160732.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190228_160732.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190328_164939_1.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190328_164939_1.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190328_164939_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190321_161203.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190321_161203.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190321_161203.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-3">
+				<a href="#" data-lightbox="img/IMG_20190314_164547.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190314_164547.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190314_164547.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-32 END -->
+<!-- bloc-49 END -->
+
+<!-- bloc-49 -->
+<div class="bloc l-bloc" id="bloc-49">
+	<div class="container bloc-lg bloc-md-lg">
+		<div class="row">
+			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 text-left">
+				<img src="img/lazyload-ph.png" data-src="img/animated-under-construction-image-0053.gif" class="img-fluid mx-auto d-block lazyload" alt="animated under construction image 0053" width="152" height="50">
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-49 END -->
 
 <!-- ScrollToTop Button -->
 <button aria-label="Scroll to top button" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></button>
@@ -234,9 +268,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3197"></script>
-<script src="./js/bootstrap.bundle.min.js?3217"></script>
-<script src="./js/blocs.min.js?1430"></script>
+<script src="./js/jquery.min.js?3571"></script>
+<script src="./js/bootstrap.bundle.min.js?2523"></script>
+<script src="./js/blocs.min.js?2020"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
