--- a/30-october-2025.html
+++ b/30-october-2025.html
@@ -5,13 +5,14 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6459">
 	<link rel="stylesheet" type="text/css" href="style.css?1408">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Contact</title>
+    <title>23-October-2025-1</title>
 
 
     
@@ -168,47 +169,49 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-4 -->
-<div class="bloc tc-7781 l-bloc" id="bloc-4">
-	<div class="container bloc-lg">
+<!-- bloc-32 -->
+<div class="bloc tc-4845" id="bloc-32">
+	<div class="container bloc-lg bloc-md-lg">
 		<div class="row">
-			<div class="col">
-				<h1 class="mg-md text-center">
-					Contact the organisers
+			<div class="col text-md-left text-center">
+				<h1 class="tc-4845 mg-md text-lg-center h1-bloc-32-style">
+					Bigyan Acharya<br>BSc (Hons) Computer Systems & Networks Engineering<br>& Network Support Engineer Intern&nbsp;at Cisco Meraki<br>
+					<div>
+						<br>
+					</div>
 				</h1>
+				<h2 class="mg-md text-lg-center">
+					Thursday 30th October 2025 17:00-18:00 – Spark Building TS111
+				</h2>
+				<p class="text-lg-center">
+					<a href="https://martinsolent.github.io/happy_hour_2022/repo_images/the-spark-room-guide-and-map.pdf">Download Spark Building Floor Plan</a><br>
+				</p>
 			</div>
 		</div>
-		<div class="row voffset-xs">
-			<div class="col-md-6 offset-lg-2 col-lg-8">
-				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/APaFdH4r_400x400.webp"><img src="img/lazyload-ph.png" data-src="img/APaFdH4r_400x400.jpg" class="img-fluid rounded-circle mx-auto d-block img-15-style lazyload" alt="APaFdH4r_400x400" width="268" height="268"></picture>
-				<h2 class="mg-md text-lg-center tc-7781 text-center">
-					Martin Reid
-				</h2>
-				<p class="text-lg-center text-center">
-					martin.reid@solent.ac.uk
-				</p>
-				<div class="row voffset-lg">
-					<div class="col col-lg-4">
-						<div class="text-center">
-							<a href="https://twitter.com/webDevSolent"><span class="icon-md fab fa-twitter-square"></span></a>
-						</div>
+	</div>
+</div>
+<!-- bloc-32 END -->
+
+<!-- bloc-32 -->
+<div class="bloc tc-7781 none l-bloc" id="bloc-32">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
+		<div class="row voffset">
+			<div class="col text-md-left text-center">
+				<div class="card">
+					<div class="card-header">
+						<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1758567607538%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/1758567607538%20copy.png" class="img-fluid mx-auto d-block img-17593352058-style lazyload" alt="Chris H" width="450" height="450"></picture>
 					</div>
-					<div class="col">
-						<div class="text-center">
-							<a href="https://github.com/martinsolent"><span class="icon-md fab fa-github-square"></span></a>
-						</div>
-					</div>
-					<div class="col">
-						<div class="text-center">
-							<a href="https://medium.com/@martinreid"><span class="icon-md fab fa-medium"></span></a>
-						</div>
+					<div class="card-body">
+						<p class="p-102-style text-left">
+							<br><strong><br>Thinking about a Summer Internship or Placement? This Talk Is for You.</strong><br><br>If you're exploring options for a summer internship between academic year, don’t miss this session with Bigyan 3rd year BSc Networking Engineering student who spent the summer at <a href="https://www.linkedin.com/company/cisco-meraki/">Cisco Meraki</a> as a Network Support Engineer Intern.<br><br>He’ll share insights into the recruitment process, what it’s like to work in a hybrid tech environment, and how he developed hands-on skills in troubleshooting, cloud-managed networking, and customer support. Whether you're just starting to think about internships or already preparing applications, this talk will offer practical advice, real-world experience, and tips to help you take the next step in your career journey.<br><br><a href="https://www.linkedin.com/in/bigyan-acharya-3232b3293/">Bigyan Acharya | LinkedIn</a><br><br><br><br>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-4 END -->
+<!-- bloc-32 END -->
 
 <!-- ScrollToTop Button -->
 <button aria-label="Scroll to top button" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></button>
