--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1697">
-	<link rel="stylesheet" type="text/css" href="style.css?9277">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6459">
+	<link rel="stylesheet" type="text/css" href="style.css?1408">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -97,7 +97,13 @@
 														<a href="13-march-2025.html" class="nav-link">13th March 2025</a>
 													</li>
 													<li class="nav-item">
-														<a href="16-october-2025.html" class="nav-link a-btn">16th October 2025</a>
+														<a href="16-october-2025.html" class="nav-link">16th October 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="23-october-2025.html" class="nav-link">23rd October 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="30-october-2025.html" class="nav-link">30th October 2025</a>
 													</li>
 												</ul>
 											</div>
@@ -151,7 +157,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc l-bloc full-width-bloc " id="bloc-1">
+<div class="bloc l-bloc full-width-bloc" id="bloc-1">
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
@@ -163,7 +169,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-2 -->
-<div class="bloc tc-7781 l-bloc" id="bloc-2">
+<div class="bloc tc-7781 l-bloc " id="bloc-2">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -208,7 +214,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card d-block">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1759335205840.webp"><img src="img/lazyload-ph.png" data-src="img/1759335205840.jpeg" class="img-fluid mx-auto lazyload" alt="Luck Searle" width="268" height="268"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1759335205840.webp"><img src="img/lazyload-ph.png" data-src="img/1759335205840.jpeg" class="img-fluid mx-auto lazyload" alt="Tyler Mealing" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
 							<strong>Tyler Mealing</strong><br>Getting a Placement&nbsp;UBS Financial Services <br><strong>16/11/2023</strong><br>
@@ -220,7 +226,7 @@
 		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/chris_H.webp"><img src="img/lazyload-ph.png" data-src="img/chris_H.jpg" class="img-fluid mx-auto d-block lazyload" alt="James Whale" width="268" height="268"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/chris_H.webp"><img src="img/lazyload-ph.png" data-src="img/chris_H.jpg" class="img-fluid mx-auto d-block lazyload" alt="Chris" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Christopher Hodges</strong><br>Getting a Placement <br>Cisco<br><strong>23/10/2025</strong>
@@ -228,13 +234,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
+			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HH_7_DEC_2023%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="panel  7/12/23" width="268" height="268"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1758567607538%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/1758567607538%20copy.png" class="img-fluid mx-auto lazyload" alt="panel  7/12/23" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
-							<strong>Panel Discussion</strong><br>Work Experience.&nbsp;<br>Placements & First Jobs<br><strong>7/12/2023&nbsp;</strong><br>
-						</p><a href="7th-dec-2023.html" class="btn btn-block btn-c-564">More Details</a>
+							<strong>Bigyan Acharya</strong><br>Getting an internship&nbsp;<br>Cisco Meraki<br><strong>30/10/2025</strong><br>
+						</p><a href="30-october-2025.html" class="btn btn-block btn-c-564">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -292,7 +298,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" width="268" height="268"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" width="96" height="23"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>NAME<br></strong>Info<br>Info<br><strong>15/2/2024&nbsp;</strong><br>
@@ -357,9 +363,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3571"></script>
-<script src="./js/bootstrap.bundle.min.js?2523"></script>
-<script src="./js/blocs.min.js?2020"></script>
+<script src="./js/jquery.min.js?3499"></script>
+<script src="./js/bootstrap.bundle.min.js?2148"></script>
+<script src="./js/blocs.min.js?2886"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
