--- a/photo-archive.html
+++ b/photo-archive.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1697">
-	<link rel="stylesheet" type="text/css" href="style.css?9277">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6459">
+	<link rel="stylesheet" type="text/css" href="style.css?1408">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>7th-Dec-2023-1</title>
@@ -98,7 +98,13 @@
 														<a href="13-march-2025.html" class="nav-link">13th March 2025</a>
 													</li>
 													<li class="nav-item">
-														<a href="16-october-2025.html" class="nav-link a-btn">16th October 2025</a>
+														<a href="16-october-2025.html" class="nav-link">16th October 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="23-october-2025.html" class="nav-link">23rd October 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="30-october-2025.html" class="nav-link">30th October 2025</a>
 													</li>
 												</ul>
 											</div>
@@ -152,7 +158,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc l-bloc full-width-bloc " id="bloc-1">
+<div class="bloc l-bloc full-width-bloc" id="bloc-1">
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
@@ -176,28 +182,28 @@
 				</p>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190131_162824.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb" class="img-fluid-up"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190131_162824.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190131_162824.jpg" class="img-fluid mx-auto d-block img-fluid-up img-117-style lazyload" alt="IMG_20190131_162824" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190131_162824.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb" class="img-fluid-up"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190131_162824.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190131_162824.jpg" class="img-fluid mx-auto d-block img-fluid-up img-117-style lazyload" alt="IMG_20190131_162824" width="270" height="40"></picture></a>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190307_161724.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190307_161724.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190307_161724.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190307_161724.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190307_161724.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190307_161724.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="164" height="26"></picture></a>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190425_160834.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190425_160834.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190425_160834.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190425_160834.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190425_160834.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190425_160834.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="164" height="26"></picture></a>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190321_164143.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190321_164143.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190321_164143.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190321_164143.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190321_164143.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190321_164143.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="164" height="26"></picture></a>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190228_160732.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190228_160732.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190228_160732.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190228_160732.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190228_160732.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190228_160732.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="164" height="26"></picture></a>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190328_164939_1.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190328_164939_1.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190328_164939_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190328_164939_1.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190328_164939_1.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190328_164939_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="164" height="26"></picture></a>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190321_161203.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190321_161203.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190321_161203.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190321_161203.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190321_161203.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190321_161203.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="164" height="26"></picture></a>
 			</div>
 			<div class="col-lg-3 col-md-6 mb-3">
-				<a href="#" data-lightbox="img/IMG_20190314_164547.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190314_164547.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190314_164547.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="270" height="152"></picture></a>
+				<a href="#" data-lightbox="img/IMG_20190314_164547.jpg" data-gallery-id="gallery-1" data-frame="frameless-lb"><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20190314_164547.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20190314_164547.jpg" class="img-fluid mx-auto d-block lazyload" alt="placeholder image sq" width="164" height="26"></picture></a>
 			</div>
 		</div>
 	</div>
@@ -209,7 +215,7 @@
 	<div class="container bloc-lg bloc-md-lg">
 		<div class="row">
 			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 text-left">
-				<img src="img/lazyload-ph.png" data-src="img/animated-under-construction-image-0053.gif" class="img-fluid mx-auto d-block lazyload" alt="animated under construction image 0053" width="152" height="50">
+				<img src="img/lazyload-ph.png" data-src="img/animated-under-construction-image-0053.gif" class="img-fluid mx-auto d-block lazyload" alt="animated under construction image 0053" width="316" height="23">
 			</div>
 		</div>
 	</div>
@@ -268,9 +274,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3571"></script>
-<script src="./js/bootstrap.bundle.min.js?2523"></script>
-<script src="./js/blocs.min.js?2020"></script>
+<script src="./js/jquery.min.js?3499"></script>
+<script src="./js/bootstrap.bundle.min.js?2148"></script>
+<script src="./js/blocs.min.js?2886"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
