--- a/spring-2022.html
+++ b/spring-2022.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1697">
-	<link rel="stylesheet" type="text/css" href="style.css?9277">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6459">
+	<link rel="stylesheet" type="text/css" href="style.css?1408">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home-1</title>
@@ -98,7 +98,13 @@
 														<a href="13-march-2025.html" class="nav-link">13th March 2025</a>
 													</li>
 													<li class="nav-item">
-														<a href="16-october-2025.html" class="nav-link a-btn">16th October 2025</a>
+														<a href="16-october-2025.html" class="nav-link">16th October 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="23-october-2025.html" class="nav-link">23rd October 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="30-october-2025.html" class="nav-link">30th October 2025</a>
 													</li>
 												</ul>
 											</div>
@@ -152,7 +158,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc l-bloc full-width-bloc " id="bloc-1">
+<div class="bloc l-bloc full-width-bloc" id="bloc-1">
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
@@ -184,7 +190,7 @@
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/Richard_photo_use.webp"><img src="img/lazyload-ph.png" data-src="img/Richard_photo_use.png" class="img-fluid mx-auto d-block lazyload" alt="Jen Swain" width="268" height="268"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/Richard_photo_use.webp"><img src="img/lazyload-ph.png" data-src="img/Richard_photo_use.png" class="img-fluid mx-auto d-block lazyload" alt="Jen Swain" width="81" height="23"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Richard Coope</strong><br>Founder - Brightful & Winchester Creatives&nbsp;<br><strong>10/3/2022</strong>
@@ -313,9 +319,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3571"></script>
-<script src="./js/bootstrap.bundle.min.js?2523"></script>
-<script src="./js/blocs.min.js?2020"></script>
+<script src="./js/jquery.min.js?3499"></script>
+<script src="./js/bootstrap.bundle.min.js?2148"></script>
+<script src="./js/blocs.min.js?2886"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
